# rustlean

./: .gitmodules  Cargo.toml  README.md
cargobuild-lean/: Cargo.toml
cargobuild-lean/src/: main.rs
examples/lean-testpkg/: Cargo.toml  build.sh  main.c
examples/rust-testpkg/: Cargo.toml
scripts/: build-testpkg
