[package]
name = "cargobuild-lean"
version = "0.1.0"
authors = ["Joe Hendrix <jhendrix@galois.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = { path = "../cargo" }
clap = { version = "2.33" }
serde_json = { version = "1.0.30", features = ["raw_value"] }